<resources>
    <string name="app_name">TipCalculator</string>
    <string name="service_question">How was the service?</string>
    <string name="serviceCost">Cost of Service</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="okay_15">Okay (15%)</string>
    <string name="roundUp">Round up tip?</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="calculate">Calculate</string>
</resources>